--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <link rel="shortcut icon" href="./favicon.ico">
   </head>
   <body>
-    <strong>yayun's index</strong>
+    <p><strong>yayun's index</strong></p>
     <!--Browser find the picture,it will resend a http request:GET /like.jpg HTTP/1.1-->
-    <img src="./like.jpg">
+    <p><img src="./like.jpg"></p>
   </body>
 </html>
 
